add `raven-pdf2bib` command-line entrypoint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ Repository = "https://github.com/Technologicat/raven"
 [project.scripts]
 raven-arxiv2id = "raven.arxiv2id:main"
 raven-check-cuda = "raven.check_cuda:main"
+raven-pdf2bib = "raven.pdf2bib:main"
 raven-preprocess = "raven.preprocess:main"
 raven-wos2bib = "raven.wos2bib:main"
 raven-visualizer = "raven.app:main"
