--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ dependencies = [
     "wordcloud>=1.9.3",
     "wosfile>=0.6",
     "chromadb>=1.0.8",
-    "bm25s>=0.2.12"
+    "bm25s>=0.2.12",
+    "watchdog>=6.0.0"
 ]
 
 keywords=["visualization", "semantic-analysis", "application", "AI", "NLP", "GUI"]
