--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ dependencies = [
     "chromadb>=1.0.8",
     "bm25s>=0.2.12",
     "watchdog>=6.0.0"
+    "chromadb>=1.0.8",  # RAG semantic search
+    "bm25s>=0.2.12",  # RAG keyword search
+    "watchdog>=6.0.0",  # RAG document directory monitoring
 ]
 
 keywords=["visualization", "semantic-analysis", "application", "AI", "NLP", "GUI"]
