refactor directory structure, vol 2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,9 @@ raven-pdf2bib = "raven.pdf2bib:main"
 raven-preprocess = "raven.preprocess:main"
 raven-wos2bib = "raven.wos2bib:main"
 raven-visualizer = "raven.app:main"
+raven-avatar-pose-editor = "raven.avatar.pose_editor.app:main"
+raven-avatar-server = "raven.avatar.server.app:main"
+raven-avatar-client = "raven.avatar.client.app:main"  # postprocessor config editor / character tester
 
 [build-system]
 requires = ["pdm-backend"]
