raven.avatar.server -> raven.server since it's now much more

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,38 +18,38 @@ dynamic = ["version"]
 dependencies = [
     "bibtexparser>=2.0.0b8",
     "dearpygui>=2.0.0",
-    "mcpyrate>=3.6.4",  # for unpythonic, though we only use the colorizer utility for now
-    "mistletoe>=1.4.0",  # for vendored dpg-markdown
-    "numpy>=1.26.4,<2.0",  # spaCy doesn't support NumPy 2.0 yet (August 2024), so staying with NumPy 1.26 for now.
-    "openTSNE>=1.0.2",
-    "pip==24.3.1",  # for spaCy language model auto-install  # TODO: version?
-    "psutil>=5.9.0",  # for vendored file_dialog
-    "scikit-learn>=1.5.1",
-    "scipy>=1.14.0",
-    "sentence_transformers>=3.4.1",  # vector embeddings for visualization and semantic search
-    "spacy>=3.7.5",
+    "mcpyrate>=3.6.4",  # we only use the colorizer utility for now
+    "mistletoe>=1.4.0",  # vendored dpg-markdown
+    "numpy>=1.26.4,<2.0",  # NOTE: spaCy doesn't support NumPy 2.0 yet (August 2024), so staying with NumPy 1.26 for now.
+    "openTSNE>=1.0.2",  # BibTeX importer: dimension reduction from high-D to 2D
+    "pip==24.3.1",  # spaCy language model auto-install  # TODO: which pip version?
+    "psutil>=5.9.0",  # vendored file_dialog
+    "scikit-learn>=1.5.1",  # BibTeX importer: high-dimensional clustering (HDBSCAN)
+    "scipy>=1.14.0",  # visualizer: KDTree
+    "sentence_transformers>=3.4.1",  # BibTeX importer: vector embeddings for visualization and semantic search
+    "spacy>=3.7.5",  # BibTeX importer: NLP analysis
     "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",  # spaCy
-    "sseclient-py>=1.8.0",
+    "sseclient-py>=1.8.0",  # librarian: streaming transport for receiving data from LLM
     "torch>=2.4.0",
     "unpythonic>=0.15.3",
-    "wordcloud>=1.9.3",
-    "wosfile>=0.6",
+    "wordcloud>=1.9.3",  # visualizer
+    "wosfile>=0.6",  # wos2bib
     "chromadb>=1.0.8",  # RAG semantic search
     "bm25s>=0.2.12",  # RAG keyword search
     "watchdog>=6.0.0",  # RAG document directory monitoring
-    "selenium>=4.32.0",  # websearch
-    "colorama>=0.4.6",  # AI avatar server (though we use it also through `mcpyrate` elsewhere)
-    "markdown>=3.8",  # AI avatar server
-    "flask>=3.1.1",  # AI avatar server
-    "flask-cors>=6.0.0",  # AI avatar server
-    "flask-compress>=1.17",  # AI avatar server
-    "torchvision>=0.22.0",  # AI avatar server
-    "huggingface-hub>=0.31.4",  # AI avatar server (for THA3 models autodownloader)
-    "waitress>=3.0.2",  # AI avatar server
-    "kokoro>=0.9.4",  # TTS: AI speech synthesizer; you may also need the `espeak-ng` software; on Linux, `sudo apt install espeak-ng`. For Windows, see https://github.com/hexgrad/kokoro
-    "av>=14.2.0",  # TTS: audio encoder
-    "pygame>=2.6.1",  # TTS audio playback
-    "qoi>=0.7.2"  # AI avatar client, fast image format for video streaming
+    "selenium>=4.32.0",  # server.websearch
+    "colorama>=0.4.6",  # server (though we use it also through `mcpyrate` elsewhere)
+    "markdown>=3.8",  # server (for rendering readme/docs)
+    "flask>=3.1.1",  # server
+    "flask-cors>=6.0.0",  # server
+    "flask-compress>=1.17",  # server
+    "torchvision>=0.22.0",  # raven.common.video
+    "huggingface-hub>=0.31.4",  # server (AI models autodownloader)
+    "waitress>=3.0.2",  # server
+    "kokoro>=0.9.4",  # server.tts; you may also need the `espeak-ng` software; on Linux, `sudo apt install espeak-ng`. For Windows, see instructions at https://github.com/hexgrad/kokoro
+    "av>=14.2.0",  # TTS audio encoder (for network transport)
+    "pygame>=2.6.1",  # TTS audio playback (client side)
+    "qoi>=0.7.2"  # server, fast lossless image format for streaming
 ]
 
 keywords=["visualization", "semantic-analysis", "application", "AI", "NLP", "GUI"]
@@ -101,8 +101,8 @@ raven-pdf2bib = "raven.pdf2bib:main"
 raven-preprocess = "raven.preprocess:main"
 raven-wos2bib = "raven.wos2bib:main"
 raven-visualizer = "raven.app:main"
+raven-server = "raven.server.app:main"
 raven-avatar-pose-editor = "raven.avatar.pose_editor.app:main"
-raven-avatar-server = "raven.avatar.server.app:main"
 raven-avatar-client = "raven.avatar.client.app:main"  # postprocessor config editor / character tester
 raven-llmclient = "raven.librarian.llmclient:main"
 
