--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,16 +95,16 @@ cuda = [
 Repository = "https://github.com/Technologicat/raven"
 
 [project.scripts]
-raven-arxiv2id = "raven.arxiv2id:main"
-raven-check-cuda = "raven.check_cuda:main"
-raven-pdf2bib = "raven.pdf2bib:main"
-raven-preprocess = "raven.preprocess:main"
-raven-wos2bib = "raven.wos2bib:main"
-raven-visualizer = "raven.app:main"
+raven-check-cuda = "raven.tools.check_cuda:main"
+raven-arxiv2id = "raven.tools.arxiv2id:main"
+raven-pdf2bib = "raven.tools.pdf2bib:main"
+raven-wos2bib = "raven.tools.wos2bib:main"
+raven-llmclient = "raven.librarian.llmclient:main"
 raven-server = "raven.server.app:main"
 raven-avatar-pose-editor = "raven.avatar.pose_editor.app:main"  # AI avatar pose editor
 raven-avatar-settings-editor = "raven.avatar.settings_editor.app:main"  # AI avatar postprocessor config editor / character tester
-raven-llmclient = "raven.librarian.llmclient:main"
+raven-preprocess = "raven.visualizer.preprocess:main"
+raven-visualizer = "raven.visualizer.app:main"  # the main app!
 
 [build-system]
 requires = ["pdm-backend"]
