move CLI chat client to raven.librarian.minichat
Now `raven.librarian.llmclient` contains library functions only,
for building LLM clients.

This is in preparation for the upcoming GUI LLM client, so that
it can share the library with the CLI client.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,7 +99,7 @@ raven-check-cuda = "raven.tools.check_cuda:main"
 raven-arxiv2id = "raven.tools.arxiv2id:main"
 raven-pdf2bib = "raven.tools.pdf2bib:main"
 raven-wos2bib = "raven.tools.wos2bib:main"
-raven-llmclient = "raven.librarian.llmclient:main"
+raven-minichat = "raven.librarian.minichat:main"
 raven-server = "raven.server.app:main"
 raven-avatar-pose-editor = "raven.avatar.pose_editor.app:main"  # AI avatar pose editor
 raven-avatar-settings-editor = "raven.avatar.settings_editor.app:main"  # AI avatar postprocessor config editor / character tester
