Add summarize module; import raven.common.utils as common_utils
Also:

- Move `chunkify` (generic sliding window text chunker
  from `raven.librarian.hybridir`) into `raven.common.utils`.
- Clean up string utilities; now the whitespace normalizer
  must be called explicitly (to avoid breaking use cases that
  benefit from other cleanups but don't want to lose paragraph
  breaks etc.).
- Unicodize markup now recognizes also &le; and &ge;

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,8 @@ dependencies = [
     "kokoro>=0.9.4",  # server.tts; you may also need the `espeak-ng` software; on Linux, `sudo apt install espeak-ng`. For Windows, see instructions at https://github.com/hexgrad/kokoro
     "av>=14.2.0",  # TTS audio encoder (for network transport)
     "pygame>=2.6.1",  # TTS audio playback (client side)
-    "qoi>=0.7.2"  # server, fast lossless image format for streaming
+    "qoi>=0.7.2",  # server, fast lossless image format for streaming
+    "dehyphen>=0.3.4"
 ]
 
 keywords=["visualization", "semantic-analysis", "application", "AI", "NLP", "GUI"]
