--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,7 @@ raven-arxiv2id = "raven.tools.arxiv2id:main"
 raven-pdf2bib = "raven.tools.pdf2bib:main"
 raven-wos2bib = "raven.tools.wos2bib:main"
 raven-minichat = "raven.librarian.minichat:main"
+raven-librarian = "raven.librarian.app:main"
 raven-server = "raven.server.app:main"
 raven-avatar-pose-editor = "raven.avatar.pose_editor.app:main"  # AI avatar pose editor
 raven-avatar-settings-editor = "raven.avatar.settings_editor.app:main"  # AI avatar postprocessor config editor / character tester
