add qoi2png tool

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,7 @@ raven-check-cuda = "raven.tools.check_cuda:main"
 raven-check-audio-devices = "raven.tools.check_audio_devices:main"
 raven-arxiv2id = "raven.tools.arxiv2id:main"
 raven-pdf2bib = "raven.tools.pdf2bib:main"
+raven-qoi2png = "raven.tools.qoi2png:main"
 raven-wos2bib = "raven.tools.wos2bib:main"
 raven-minichat = "raven.librarian.minichat:main"
 raven-librarian = "raven.librarian.app:main"
