--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,8 @@ dependencies = [
     "qoi>=0.7.2",  # server, fast lossless image format for streaming
     "dehyphen>=0.3.4",
     "sentencepiece>=0.2.1",
-    "sacremoses>=0.1.1"
+    "sacremoses>=0.1.1",
+    "strip-markdown>=1.3"
 ]
 
 keywords=["visualization", "semantic-analysis", "application", "AI", "NLP", "GUI"]
