--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,8 @@ dependencies = [
     "dehyphen>=0.3.4",
     "sentencepiece>=0.2.1",
     "sacremoses>=0.1.1",
-    "strip-markdown>=1.3"
+    "strip-markdown>=1.3",
+    "emoji>=1.7.0"
 ]
 
 keywords=["visualization", "semantic-analysis", "application", "AI", "NLP", "GUI"]
