--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,11 +50,11 @@ dependencies = [
     "av>=14.2.0",  # TTS audio encoder (for network transport)
     "pygame>=2.6.1",  # TTS audio playback (client side)
     "qoi>=0.7.2",  # server, fast lossless image format for streaming
-    "dehyphen>=0.3.4",
-    "sentencepiece>=0.2.1",
-    "sacremoses>=0.1.1",
-    "strip-markdown>=1.3",
-    "emoji>=1.7.0"
+    "dehyphen>=0.3.4",  # server, `sanitize` module
+    "sentencepiece>=0.2.1",  # server, `translate` module, needed by some transformers models
+    "sacremoses>=0.1.1",  # server, `translate` module, needed by some transformers models
+    "strip-markdown>=1.3",  # TTS
+    "emoji>=1.7.0"  # TTS, emoji stripping
 ]
 
 keywords=["visualization", "semantic-analysis", "application", "AI", "NLP", "GUI"]
