WIP first draft of audio recorder for STT

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,8 @@ dependencies = [
     "sacremoses>=0.1.1",  # server, `translate` module, needed by some transformers models
     "strip-markdown>=1.3",  # TTS
     "emoji>=1.7.0",  # TTS, emoji stripping
-    "accelerate>=1.11.0"  # faster loading of `whisper-large-v3-turbo`, according to model card
+    "accelerate>=1.11.0",  # faster loading of `whisper-large-v3-turbo`, according to model card
+    "pvrecorder>=1.2.7"
 ]
 
 keywords=["visualization", "semantic-analysis", "application", "AI", "NLP", "GUI"]
