new command-line tool: raven-arxiv-download

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,6 +105,7 @@ Repository = "https://github.com/Technologicat/raven"
 raven-check-cuda = "raven.tools.check_cuda:main"
 raven-check-audio-devices = "raven.tools.check_audio_devices:main"
 raven-arxiv2id = "raven.tools.arxiv2id:main"
+raven-arxiv-download = "raven.tools.arxiv_download:main"
 raven-burstbib = "raven.tools.burstbib:main"
 raven-dehyphenate = "raven.tools.dehyphenate:main"
 raven-pdf2bib = "raven.tools.pdf2bib:main"
