new command-line tool: raven-csv2bib
Convert comma-separated values (e.g. from Excel) into a BibTeX database,
for importing into Raven-visualizer.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,7 @@ raven-arxiv2id = "raven.tools.arxiv2id:main"
 raven-arxiv-download = "raven.tools.arxiv_download:main"
 raven-burstbib = "raven.tools.burstbib:main"
 raven-dehyphenate = "raven.tools.dehyphenate:main"
+raven-csv2bib = "raven.tools.csv2bib:main"
 raven-pdf2bib = "raven.tools.pdf2bib:main"
 raven-qoi2png = "raven.tools.qoi2png:main"
 raven-wos2bib = "raven.tools.wos2bib:main"
