--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+00_stuff
 __pycache__
 *~
 *.pyc
@@ -5,6 +6,9 @@ __pycache__
 build
 dist
 MANIFEST
+pdm.lock
 .pdm-python
 .spyproject
+.venv
 *.egg-info
+.python-version
