--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ description = "Semantic visualizer and analyzer"
 authors = [
     { name = "Juha Jeronen and JAMK University of Applied Sciences", email = "juha.jeronen@jamk.fi" },
 ]
-requires-python = "<3.13,>=3.10"  # TODO: add support for Python 3.13 in unpythonic and mcpyrate (its dependency)
+requires-python = "<3.13,>=3.11"  # TODO: add support for Python 3.13, 3.14 in unpythonic and mcpyrate (its dependency)
 
 readme = "README.md"
 
@@ -69,7 +69,6 @@ classifiers = [
     "Operating System :: Linux",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: Implementation :: CPython",
