add tests to chattree, fix children duplication bug in copy_subtree
Tests created by Claude Opus 4.5.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,11 @@ classifiers = [
 # This is currently configured for CUDA 12.x.
 #
 # The NVIDIA packages will be installed into `.venv/lib/python3.10/site-packages/nvidia*`.
+[dependency-groups]
+dev = [
+    "pytest>=8.0",
+]
+
 [project.optional-dependencies]
 cuda = [
     "cupy-cuda12x>=13.2.0",
