xdot graph viewer DPG widget & standalone app, first draft
With thanks to Claude Opus 4.5 & 4.6 and Claude Code.

DONE:

- Port xdottir (my XDot fork from years back) over to DPG
- Refactor the whole 4000-line app, extracting a graph viewer widget,
  and rewriting it to use DPG
- Modernize its GUI animations and integrate with Raven's GUI animator
- Review all of the code in the new `raven.common.gui.xdotwidget`

TODO:

- Review `raven.common.gui.xdotwidget.tests`
- Review `raven.xdot_viewer`
- Test everything

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,7 @@ raven-avatar-pose-editor = "raven.avatar.pose_editor.app:main"  # AI avatar pose
 raven-avatar-settings-editor = "raven.avatar.settings_editor.app:main"  # AI avatar postprocessor config editor / character tester
 raven-importer = "raven.visualizer.importer:main"
 raven-visualizer = "raven.visualizer.app:main"  # the main app!
+raven-xdot-viewer = "raven.xdot_viewer.app:main"  # xdot graph viewer
 
 [build-system]
 requires = ["pdm-backend"]
